@@ -3,7 +3,8 @@ EXTRA_DIST = \
 	fapolicyd.service \
 	fapolicyd.conf \
 	fapolicyd.trust \
-	fapolicyd-tmpfiles.conf
+	fapolicyd-tmpfiles.conf \
+	fapolicyd-magic
 
 fapolicyddir = $(sysconfdir)/fapolicyd
 
@@ -14,3 +15,10 @@ dist_fapolicyd_DATA = \
 
 systemdservicedir = $(systemdsystemunitdir)
 dist_systemdservice_DATA = fapolicyd.service
+
+MAGIC = fapolicyd-magic.mgc
+pkgdata_DATA = ${MAGIC}
+CLEANFILES = ${MAGIC}
+
+${MAGIC}: $(EXTRA_DIST)
+	file -C -m fapolicyd-magic
