@@ -2,6 +2,7 @@
 - In fapolicyd-cli, add a --list option to list rules
 - Change lmdb to use writable mmap for startup performance improvment
 - Change the database to support duplicate keys
+- Provide a magic override file and use it during file inspection
 
 0.9.2
 - Split codebase into daemon, library and cli
